--- a/c/c/radius/TODO
+++ b/c/c/radius/TODO
@@ -1,6 +1,6 @@
 
- * Extendable format (i.e. no recompiles to add a field).
+   I can't think of anything right now.
 
 ----------------------------------------
 Copyright (c) 1997  Dustin Sallings
-$Id: TODO,v 2.0 1997/09/21 00:28:42 dustin Exp $
+$Id: TODO,v 2.1 1997/09/22 16:17:02 dustin Exp $
